@@ -1,3 +1,8 @@
+2003-01-09  James M. Cape  <jcape@ignore-your.tv>
+
+	* src/themes/Esco/metacity-theme-1.xml: Use a line for the titlebar
+	text bg.
+
 2003-01-09  Havoc Pennington  <hp@redhat.com>
 
 	* src/window.c (recalc_window_features): argh, we were making all
